Adding module imports.

--- a/hugo.yml
+++ b/hugo.yml
@@ -17,18 +17,18 @@ module:
   hugoVersion:
     extended: true
     min: 0.125
-  # imports:
-  #   - path: github.com/wvuweb/wvu-ds-v3-hugo
-  #   - path: components.local
-  #   - path: github.com/cloudcannon/bookshop/hugo/v3
-  #   - path: github.com/wvuweb/wvu-ds-v3-bookshop-components
-  #     mounts:
-  #     - source: component-library
-  #       target: layouts/partials/bookshop/
-  #     - source: component-library
-  #       target: assets/bookshop/
-  # replacements:
-  #   - components.local -> ../component-library
+  imports:
+    - path: github.com/wvuweb/wvu-ds-v3-hugo
+    - path: components.local
+    - path: github.com/cloudcannon/bookshop/hugo/v3
+    - path: github.com/wvuweb/wvu-ds-v3-bookshop-components
+      mounts:
+      - source: component-library
+        target: layouts/partials/bookshop/
+      - source: component-library
+        target: assets/bookshop/
+  replacements:
+    - components.local -> ../component-library
 
 caches:
   images:
